fixed wrapping for point settings and font settings

--- a/app/src/settings_tabs/Column.css
+++ b/app/src/settings_tabs/Column.css
@@ -40,9 +40,10 @@
 }
 
 .column-accordion-wrapper {
-  min-width: 200px;
+  min-width: 10vw;
   width: 300px;
-  max-width: 70vw;
+  /* max-width: 70vw; */
+  max-width: 100vw;
   overflow: auto;
   border: 1px solid lightgray;
   border-radius: 4px;
